// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAccordionItemTableComponentOptions should normalize complex accordion item table component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./logs-panel/logs-panel.component",
      "name": "LogsPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "admin-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "logs-panel",
  "context": null,
  "controllerName": "logs",
  "description": null,
  "directory": "admin-accordion/logs-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "table",
  "modifiers": [],
  "name": "logs",
  "nestModule": "admin-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "table": {
    "actionList": [],
    "backend": {
      "kind": "none",
    },
    "columnList": [
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_date",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "date",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "date",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Date",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_level",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "level",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "level",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Level",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_message",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "message",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "message",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Message",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "componentName": "logs-table",
    "cssClass": null,
    "filterList": [],
    "hasPaginator": true,
    "headerButton": null,
    "identifier": null,
    "modifiers": [
      "with-header",
    ],
    "openApi": null,
    "propertyList": [
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_date",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "date",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "date",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Date",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_level",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "level",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "level",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Level",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_message",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "message",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "message",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Message",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "rowId": null,
    "selectColumn": false,
    "sortable": {
      "default": null,
      "enabled": false,
    },
    "tableMethod": null,
    "title": "Logs",
    "upstream": null,
    "withHeader": true,
  },
  "template": "table-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;

exports[`NormalizeAccordionItemTableComponentOptions should normalize minimal accordion item table component options 1`] = `
{
  "accordionImportList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "./test-at-panel/test-at-panel.component",
      "name": "TestAtPanelComponent",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "accordionName": "parent-accordion",
  "backend": {
    "kind": "none",
  },
  "componentName": "test-at-panel",
  "context": null,
  "controllerName": "test-at",
  "description": null,
  "directory": "parent-accordion/test-at-panel",
  "feature": null,
  "handlebars": [Function],
  "identifier": null,
  "ifTruthy": null,
  "importList": [],
  "kind": "table",
  "modifiers": [],
  "name": "test-at",
  "nestModule": "parent-accordion",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "scope": null,
  "shared": false,
  "table": {
    "actionList": [],
    "backend": {
      "kind": "none",
    },
    "columnList": [
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_col1",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "col1",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "col1",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Col1",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "componentName": "test-at-table",
    "cssClass": null,
    "filterList": [],
    "hasPaginator": true,
    "headerButton": null,
    "identifier": null,
    "modifiers": [
      "with-header",
    ],
    "openApi": null,
    "propertyList": [
      {
        "active": false,
        "cssClass": null,
        "filterControl": null,
        "filterCssClass": null,
        "filterName": "filter_col1",
        "handlebars": [Function],
        "hasFilter": false,
        "headerCssClass": null,
        "hidden": false,
        "importList": [],
        "inactive": false,
        "isArray": false,
        "isOptional": false,
        "kind": "default",
        "memberList": [],
        "modifiers": [],
        "name": "col1",
        "nowrap": false,
        "pipeList": [],
        "propertyPath": "col1",
        "show": false,
        "sortable": false,
        "source": null,
        "sticky": null,
        "stickyEnd": false,
        "stickyStart": false,
        "synthetic": false,
        "template": "default-table-column.hbs",
        "title": "Col1",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "unknown",
          "namedImport": null,
          "namespaceImport": null,
        },
        "withoutTitle": false,
      },
    ],
    "rowId": null,
    "selectColumn": false,
    "sortable": {
      "default": null,
      "enabled": false,
    },
    "tableMethod": null,
    "title": "Test At",
    "upstream": null,
    "withHeader": true,
  },
  "template": "table-accordion-item.hbs",
  "title": "jest",
  "upstream": null,
}
`;
